--- a/app/views/hobbies/_form.erb
+++ b/app/views/hobbies/_form.erb
@@ -1,27 +1,30 @@
 
+<form>
+    <div class="form-group">
+        <%= form_for @hobby do |f| %>
 
-<%= form_for @hobby do |f| %>
+        <%= f.label :name %><br>
+        <%= f.text_field :name %><br><br>
 
-<%= f.label :name %><br>
-<%= f.text_field :name %><br><br>
+        <%= f.label :category_ids %><br>
+        <%= f.collection_select :category_ids, @categories, :id, :name, include_blank: false %><br><br>
 
-<%= f.label :category_ids %><br>
-<%= f.collection_select :category_ids, @categories, :id, :name, include_blank: false %><br><br>
+        <%= f.label :description %><br>
+        <%= f.text_area :description %><br><br>
 
-<%= f.label :description %><br>
-<%= f.text_area :description %><br><br>
+        <!-- <%= f.collection_check_boxes :material_ids, @materials, :id, :name, include_hidden: false do |b|%><br><br>
+            <div class="form-check form-check-inline">
+                <%= b.label %>&nbsp<%= b.check_box %>
+            </div>
+        <% end %> -->
 
-<!-- <%= f.collection_check_boxes :material_ids, @materials, :id, :name, include_hidden: false do |b|%><br><br>
-    <div class="form-check form-check-inline">
-        <%= b.label %>&nbsp<%= b.check_box %>
+            <%= f.fields_for :materials do |ff|%>
+                <br><%= ff.label :name %>
+                <%= ff.text_field :name %><br><br>
+            <% end %>
+
+        <%= f.submit class: "btn btn-primary btn-sm"%>
+
+        <% end %>
     </div>
-<% end %> -->
-
-    <%= f.fields_for :materials do |ff|%>
-        <br><%= ff.label :name %>
-        <%= ff.text_field :name %><br><br>
-    <% end %>
-
-<%= f.submit %>
-
-<% end %>
+</form>
