--- a/app/views/hobbies/index.erb
+++ b/app/views/hobbies/index.erb
@@ -1,3 +1,4 @@
+<%= javascript_pack_tag 'index.js' %>
 <!--<h1>Hobbies:</h1>
 <h2><% @hobbies.each do |f| %>
         <%=link_to f.name, f%><br><br>
